--- a/index.html
+++ b/index.html
@@ -645,6 +645,23 @@
                         <li>
                             <span class="fa-li"><i class="fa-solid fa-handshake-angle text-warning"></i></span>
                             <strong>July 2024 – June 2025 - Schulich School of Medicine & Dentistry Hippocratic Council, Vice President of Communications</strong>
+                            <br>
+                            <em>In charge of communications from Hippocratic Council to medical student body. Coordinate with Honour Society to select graduating class award winners. Work with IT Director to ensure Hippocratic website up to date. Work with Social Media Director to promptly advertise student activities on social media platforms.</em>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-handshake-angle text-warning"></i></span>
+                            <strong>September 2024 – Present - Schulich Reels, Senior Exec</strong>
+                            <em>Organize movie nights & movie trivia competition to discuss cinema with fellow med students. </em>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-handshake-angle text-warning"></i></span>
+                            <strong>September 2023 – Present - Free & Open-source Medicine Club, Senior Exec</strong>
+                            <em>Collaborate with medical non-profit, Glia (https://glia.org/), to give out open-source 3D-printed stethoscopes to medical students. Set up 3D printer for use by interested students on campus.</em>
+                        </li>                        
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-handshake-angle text-warning"></i></span>
+                            <strong>September 2023 – Present - Oncology Interest Group, Senior Exec</strong>
+                            <em>Organize multidisciplinary panel sessions comprising medical, radiation, and surgical oncologists for them to share their experiences to students interested in oncology.</em>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fa-solid fa-handshake-angle text-warning"></i></span>
@@ -654,19 +671,15 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fa-solid fa-handshake-angle text-warning"></i></span>
-                            <strong>September 2023 – Present - Psychedelics in Medicine, Junior Exec</strong>
+                            <strong>September 2023 – June 2024 - Psychedelics in Medicine, Junior Exec</strong>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fa-solid fa-handshake-angle text-warning"></i></span>
-                            <strong>September 2023 – Present - Oncology Interest Group, Senior Exec</strong>
+                            <strong>September 2023 – June 2024 - RxLit Medicine Book Club, Communications Exec</strong>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fa-solid fa-handshake-angle text-warning"></i></span>
-                            <strong>September 2023 – Present - RxLit Medicine Book Club, Communications Exec</strong>
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fa-solid fa-handshake-angle text-warning"></i></span>
-                            <strong>September 2023 – Present - Canadian Cancer Society – RIOT London Chapter, Community Outreach Chair</strong>
+                            <strong>September 2023 – June 2024 - Canadian Cancer Society – RIOT London Chapter, Community Outreach Chair</strong>
                         </li>
 
 
