--- a/index.html
+++ b/index.html
@@ -556,72 +556,74 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Awards</h2>
                     <ul class="fa-ul mb-0" id="awards-list">
-                        <!-- Awards from October 2019 onwards -->
-                        <!-- <li> -->
-                            <!-- <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span> -->
-                            <!-- <strong>June 2025 - Summer Research Training Program ($5000)</strong> -->
-                            <!-- <br> -->
-                            <!-- <em>Awarded for conducting summer research examining LLM in classifying oncogenic variants in pan-cancer patients.</em> -->
-                        <!-- </li> -->
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            <strong>June 2024 - Summer Research Training Program ($5000)</strong>
-                            <br>
-                            <em>Awarded for conducting summer research examining LLM in improving digital pathology workflows.</em>
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            <strong>February 2024 - Ontario Medical Students Association Conference Award ($250)</strong>
-                            <br>
-                            <em>Awarded for presenting poster at AACR 2024.</em>
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            <strong>March 2024 - Pathology Research and Innovation Fund ($8000)</strong>
-                            <br>
-                            <em>Awarded by Western University Department of Pathology and Laboratory Medicine.</em>
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            <strong>June 2022 - The Healthcare Innovation Challenge – 1st place</strong>
-                            <br>
-                            <em>Presented a novel way to improve health of LGBTQ2S+ Canadian refugees using a deep learning trained chatbot.</em>
-                            <br>
-                            <em>Presented pitch to diverse panel of healthcare practitioners and data scientists.</em>
-                            <br>
-                            <em>20 teams competed for top prize.</em>
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            <strong>March 2022 - UHN Office of Research Trainees Conference Award ($500)</strong>
-                            <br>
-                            <em>Awarded to one research trainee at the Princess Margaret Cancer Centre to participate in national and international conferences and share their research in oral and/or poster presentations.</em>
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            <strong>February 2021 - University of Toronto Student Leadership Award (UTSLA)</strong>
-                            <br>
-                            <em>Awarded to 20 graduating students in the Faculty of Medicine who have made outstanding student leadership, service, and commitment to the university.</em>
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            <strong>April 2020 - Canada Graduate Scholarships Master’s Program ($18,500)</strong>
-                            <br>
-                            <em>Awarded by Canadian Institute for Health Research.</em>
-                            <br>
-                            <em>This award aims to help develop research skills and assist in the training of highly qualified personnel by supporting students who demonstrate a high standard of achievement in undergraduate and early graduate studies.</em>
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            <strong>October 2019 - Strategic Training in Transdisciplinary Radiation Science for the 21st Century (STARS21) Award ($25,000)</strong>
-                            <br>
-                            <em>Awarded by the University of Toronto Dept. of Radiation Oncology, The Terry Fox Foundation, and the Princess Margaret Radiation Medicine Program.</em>
-                            <br>
-                            <em>This award funds a strategic training program designed to provide graduate students with the skills essential to conducting transdisciplinary research in radiation medicine.</em>
-                        </li>
+                            <!-- Awards from October 2019 onwards -->
+                            <!-- <li> -->
+                                <!-- <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span> -->
+                                <!-- <strong>June 2025 - Summer Research Training Program ($5000)</strong> -->
+                                <!-- <br> -->
+                                <!-- <em>Awarded for conducting summer research examining LLM in classifying oncogenic variants in pan-cancer patients.</em> -->
+                            <!-- </li> -->
+                            <li>
+                                <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                                <strong>June 2024 - Summer Research Training Program ($5000)</strong>
+                                <br>
+                                <em>Awarded for conducting summer research examining LLM in improving digital pathology workflows.</em>
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                                <strong>February 2024 - Ontario Medical Students Association Conference Award ($250)</strong>
+                                <br>
+                                <em>Awarded for presenting poster at AACR 2024.</em>
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                                <strong>March 2024 - Pathology Research and Innovation Fund ($8000)</strong>
+                                <br>
+                                <em>Awarded by Western University Department of Pathology and Laboratory Medicine.</em>
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                                <strong>June 2022 - The Healthcare Innovation Challenge – 1st place</strong>
+                                <br>
+                                <em>Presented a novel way to improve health of LGBTQ2S+ Canadian refugees using a deep learning trained chatbot.</em>
+                                <br>
+                                <em>Presented pitch to diverse panel of healthcare practitioners and data scientists.</em>
+                                <br>
+                                <em>20 teams competed for top prize.</em>
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                                <strong>March 2022 - UHN Office of Research Trainees Conference Award ($500)</strong>
+                                <br>
+                                <em>Awarded to one research trainee at the Princess Margaret Cancer Centre to participate in national and international conferences and share their research in oral and/or poster presentations.</em>
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                                <strong>February 2021 - University of Toronto Student Leadership Award (UTSLA)</strong>
+                                <br>
+                                <em>Awarded to 20 graduating students in the Faculty of Medicine who have made outstanding student leadership, service, and commitment to the university.</em>
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                                <strong>April 2020 - Canada Graduate Scholarships Master’s Program ($18,500)</strong>
+                                <br>
+                                <em>Awarded by Canadian Institute for Health Research.</em>
+                                <br>
+                                <em>This award aims to help develop research skills and assist in the training of highly qualified personnel by supporting students who demonstrate a high standard of achievement in undergraduate and early graduate studies.</em>
+                            </li>
+                            <li>
+                                <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                                <strong>October 2019 - Strategic Training in Transdisciplinary Radiation Science for the 21st Century (STARS21) Award ($25,000)</strong>
+                                <br>
+                                <em>Awarded by the University of Toronto Dept. of Radiation Oncology, The Terry Fox Foundation, and the Princess Margaret Radiation Medicine Program.</em>
+                                <br>
+                                <em>This award funds a strategic training program designed to provide graduate students with the skills essential to conducting transdisciplinary research in radiation medicine.</em>
+                            </li>
+                        </ul>
             
                         <!-- Awards before October 2019 (hidden by default) -->
                         <div id="older-awards" style="display: none;">
+                        <ul class="fa-ul mb-0" id="awards-list">
                             <li>
                                 <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                                 <strong>June 2019 - Institute of Medical Science Entrance Award ($5000)</strong>
