--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                             <span class="fa-li"><i class="fa-solid fa-book text-warning"></i></span>
                             <strong>PRMT1 inhibitor MS023 suppresses RNA splicing to sensitize small cell lung cancer to DNA damaging agents</strong>
                             <br>
-                            <em>MK Aparnathi, <u>Sami Ul Haq</u>, J St-Germain, K Nixon, J Walton, L Song, S Majeed, P Patel, R Subramaniam, V Philip, R Marcellus, D Barsyte-Lovejoy, R Al-Awar, R Hakem, CH Arrowsmith, L Ailles, B Raught, BH Lok<i>Neoplasia 66, 101176, 2025</i>. 2025.</em>
+                            <em>MK Aparnathi, <u>Sami Ul Haq</u>, J St-Germain, K Nixon, J Walton, L Song, S Majeed, P Patel, R Subramaniam, V Philip, R Marcellus, D Barsyte-Lovejoy, R Al-Awar, R Hakem, CH Arrowsmith, L Ailles, B Raught, BH Lok. <i>Neoplasia 66, 101176, 2025</i>. 2025.</em>
                         </li>
                 
                         <li>
