--- a/index.html
+++ b/index.html
@@ -521,6 +521,9 @@
                               <canvas class="swiper-slide pdf-viewer" data-pdf="posters/pdf2.pdf"></canvas>
                               <canvas class="swiper-slide pdf-viewer" data-pdf="posters/pdf4.pdf"></canvas>
                               <canvas class="swiper-slide pdf-viewer" data-pdf="posters/pdf5.pdf"></canvas>
+                              <canvas class="swiper-slide pdf-viewer" data-pdf="posters/pdf7.pdf"></canvas>
+                              <canvas class="swiper-slide pdf-viewer" data-pdf="posters/pdf8.pdf"></canvas>
+                              <canvas class="swiper-slide pdf-viewer" data-pdf="posters/pdf9.pdf"></canvas>
                           </div>
                           <div class="swiper-button-next"></div>
                           <div class="swiper-button-prev"></div>
